--- a/index.css
+++ b/index.css
@@ -31,3 +31,39 @@ a {
 a:hover {
   color: #ffc107;
 }
+
+
+/* body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+} */
+h1, h2 {
+  text-align: center;
+}
+.book {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 50px;
+}
+.book img {
+  max-width: 200px;
+  height: auto;
+  margin-bottom: 10px;
+  border: 2px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0 0 5px #ddd;
+}
+.book h2 {
+  font-size: 24px;
+  margin: 0;
+  text-align: center;
+}
+.book p {
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: justify;
+  margin: 0;
+  max-width: 600px;
+}
